--- a/CookPopularControl/Themes/CookColors/BaseColor.xaml
+++ b/CookPopularControl/Themes/CookColors/BaseColor.xaml
@@ -13,7 +13,7 @@
 
 
 
-    <!--  **********以下不变的***********  -->
+    <!--  **********以下保持不变***********  -->
 
     <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}" />
     <SolidColorBrush x:Key="FieldPlaceHolderBrush" Color="#D3D3D3" />
@@ -21,8 +21,10 @@
 
     <Color x:Key="BlockColor">#554A4A4A</Color>
     <Color x:Key="UnEnabledColor">#D3D3D3</Color>
+    <Color x:Key="LightColor">#F8F9FA</Color>
     <SolidColorBrush x:Key="BlockBrush" Color="{StaticResource BlockColor}" />
     <SolidColorBrush x:Key="UnEnabledBrush" Color="{StaticResource UnEnabledColor}" />
+    <SolidColorBrush x:Key="LightBrush" Color="{StaticResource LightColor}" />
 
     <Color x:Key="MessageDialogSuccessColor">#32AA32</Color>
     <Color x:Key="MessageDialogInfoColor">#1E90FF</Color>
