--- a/MvvmTestDemo/DemoViews/CheckBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/CheckBoxDemo.xaml
@@ -9,22 +9,21 @@
              d:DesignWidth="800">
 
     <ScrollViewer ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <WrapPanel HorizontalAlignment="Center">
-                <CheckBox Width="220" Height="60"
+        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <CheckBox Width="220" Height="60"
                           Content="LineCheckBox"
                           FontSize="20"
                           Padding="10,0,0,0" ToolTip="LineCheckBox"
                           pc:CheckBoxAssistant.FillBrush="{StaticResource PrimaryBackgroundBrush}"
                           pc:CheckBoxAssistant.FillSize="50" pc:CheckBoxAssistant.FillThickness="5"
                           pc:CheckBoxAssistant.FillType="Line" />
-                <CheckBox Width="230" Height="30"
+            <CheckBox Width="230" Height="30"
                           Content="RectangleCheckBox"
                           FontSize="20"
                           Margin="30,0" Padding="10,0,0,0" ToolTip="RectangleCheckBox"
                           pc:CheckBoxAssistant.FillBrush="{StaticResource PrimaryThemeBrush}"
                           pc:CheckBoxAssistant.FillSize="15" pc:CheckBoxAssistant.FillType="Rectangle" />
-                <CheckBox Width="200" Height="30"
+            <CheckBox Width="200" Height="30"
                           Content="CheckCheckBox"
                           Background="Red"
                           FontSize="20"
@@ -32,30 +31,13 @@
                           pc:CheckBoxAssistant.FillBrush="{StaticResource PrimaryBackgroundBrush}"
                           pc:CheckBoxAssistant.FillSize="25" pc:CheckBoxAssistant.FillThickness="1"
                           pc:CheckBoxAssistant.FillType="Check" />
-                <CheckBox Width="220" Height="60"
+            <CheckBox Width="220" Height="60"
                           Content="LineCheckBox"
                           FontSize="20"
                           Margin="0,20" Padding="10,0,0,0" ToolTip="LineCheckBox"
                           pc:CheckBoxAssistant.FillBrush="{StaticResource PrimaryBackgroundBrush}"
                           pc:CheckBoxAssistant.FillSize="50" pc:CheckBoxAssistant.FillThickness="5"
                           pc:CheckBoxAssistant.FillType="Line" IsEnabled="False" />
-            </WrapPanel>
-            <WrapPanel Margin="0,50" HorizontalAlignment="Center">
-                <pc:SwitchControl Width="100" Height="30"
-                                  Content="LineCheckBox"
-                                  FontSize="10"
-                                  ToolTip="UnEnabled"
-                                  pc:FrameworkElementBaseAttached.ShadowEffect="{StaticResource ShadowEffectDepth1}"
-                                  Effect="{StaticResource ShadowEffectDepth1}"
-                                  IsEnabled="False" />
-                <pc:SwitchControl Width="200" Height="50"
-                                  Content="LineCheckBox"
-                                  FontSize="20"
-                                  Margin="20,0" ToolTip="IsEnabled"
-                                  pc:FrameworkElementBaseAttached.ShadowEffect="{StaticResource ShadowEffectDepth1}"
-                                  Effect="{StaticResource ShadowEffectDepth1}"
-                                  IsEnabled="True" />
-            </WrapPanel>
-        </StackPanel>
+        </WrapPanel>
     </ScrollViewer>
 </UserControl>
