--- a/MvvmTestDemo/DemoViews/GroupControlsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/GroupControlsDemo.xaml
@@ -12,31 +12,31 @@
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <StackPanel Width="{StaticResource DemosViewViewDefaultWidth}" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="SearchControl:"
+        <TextBlock Text="SearchBar:"
                    FontSize="20" FontWeight="DemiBold"
                    Margin="0,8" />
         <WrapPanel>
-            <pc:SearchControl Width="200" Height="35"
-                              ContentChanged="SearchControl_ContentChanged" StartSearch="SearchControl_StartSearch" />
-            <pc:SearchControl Width="200" Height="35"
-                              Margin="20,0"
-                              ContentChanged="SearchControl_ContentChanged" StartSearch="SearchControl_StartSearch"
-                              Style="{StaticResource SearchControlAddClearButtonStyle}" />
-            <pc:SearchControl Width="200" Height="35"
-                              ContentChanged="SearchControl_ContentChanged" StartSearch="SearchControl_StartSearch"
-                              Style="{StaticResource SearchControlAddClearButtonStyle}">
-                <pc:SearchControl.Content>
+            <pc:SearchBar Width="200" Height="35"
+                          ContentChanged="SearchBar_ContentChanged" StartSearch="SearchBar_StartSearch" />
+            <pc:SearchBar Width="200" Height="35"
+                          Margin="20,0"
+                          ContentChanged="SearchBar_ContentChanged" StartSearch="SearchBar_StartSearch"
+                          Style="{StaticResource SearchBarAddClearButtonStyle}" />
+            <pc:SearchBar Width="200" Height="35"
+                          ContentChanged="SearchBar_ContentChanged" StartSearch="SearchBar_StartSearch"
+                          Style="{StaticResource SearchBarAddClearButtonStyle}">
+                <pc:SearchBar.Content>
                     <Binding Mode="TwoWay" Path="SearchContent" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
                             <pt:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True" />
                         </Binding.ValidationRules>
                     </Binding>
-                </pc:SearchControl.Content>
-            </pc:SearchControl>
-            <pc:SearchControl Width="200" Height="35"
-                              Margin="0,20"
-                              ContentChanged="SearchControl_ContentChanged" IsEnabled="False"
-                              StartSearch="SearchControl_StartSearch" />
+                </pc:SearchBar.Content>
+            </pc:SearchBar>
+            <pc:SearchBar Width="200" Height="35"
+                          IsEnabled="False"
+                          Margin="0,20"
+                          ContentChanged="SearchBar_ContentChanged" StartSearch="SearchBar_StartSearch" />
         </WrapPanel>
 
         <TextBlock Text="EditingTag:"
