--- a/CookPopularControl/Themes/CookColors/YellowColor.xaml
+++ b/CookPopularControl/Themes/CookColors/YellowColor.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/BaseColor.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <Color x:Key="PrimaryThemeColor">#FFFF33</Color>
     <Color x:Key="AssistantThemeColor">#00DD00</Color>
     <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
